--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-passport": "^4.0.1",
     "koa-router": "^7.2.1",
     "koa-session": "^5.5.1",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.1.2"
   }
